fix project .image height sizing on mobiles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -772,7 +772,7 @@ main{
   }
 
   .project .image{
-    height: 60vw;
+    height: 50vw;
   }
 
   h1{
